Trying to fix center align on input elements

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -58,6 +58,8 @@ label {
 
 input,
 select {
+  display: block;
+
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -72,7 +74,6 @@ select {
   color: var(--text-primary);
   font-size: 0.875rem;
   font-family: inherit;
-  text-align: left;
   padding: 0 1rem;
   border: 0;
   border-radius: 0;
